# BeepMusic

./: README.md  setup.cfg  setup.py
src/: beepMusicPlayer.py  蜜雪冰城.bmc
src/beepmusic/: __init__.py  __main__.py  beepmusic.py  musicLaw.py  parser.py
src/beepmusic/builtin_musics/: joy.bmc
tests/: RULES  test.py
