[metadata]
name = beepmusic
version = 0.0.1
author = Chris Pan
author_email = pgx@pku.edu.cn
description = 使用计算机提示音播放乐谱。Play music using computer beep prompt tone.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChrisChemHater/BeepMusic
project_urls =
    Bug Tracker = https://github.com/ChrisChemHater/BeepMusic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src